examples/onboard/apply/kyverno-policies/kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds: [Pod]
      validate:
        failureAction: Audit
        message: "An image tag is required and must not be latest."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
